test/conformance/chainsaw/verifyImages/clusterpolicy/standard/empty-image/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyed-basic-policy
spec:
  admission: true
  background: false
  failurePolicy: Fail
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: keyed-basic-rule
    verifyImages:
    - attestors:
      - entries:
        - keys:
            ctlog:
              ignoreSCT: true
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
            rekor:
              ignoreTlog: true
              url: https://rekor.sigstore.dev
            signatureAlgorithm: sha256
      imageReferences:
      - '*'
      mutateDigest: true
      required: true
      useCache: true
      verifyDigest: true
      failureAction: Enforce
  webhookTimeoutSeconds: 30
