test/conformance/chainsaw/verifyImages/clusterpolicy/standard/empty-image/02-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      file: resource.yaml
